UtahLiveDataTest/src/objects/FileBatch__c.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Reallocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorLog__c</fullName>
        <label>Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalFileName__c</fullName>
        <label>External File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileBatchKey__c</fullName>
        <label>FileBatchKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstApproverComment__c</fullName>
        <label>First Approver Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>File_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
                <value>
                    <fullName>2045</fullName>
                </value>
                <value>
                    <fullName>2046</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideUploadBtn__c</fullName>
        <formula>TEXT(Status__c) != &apos;Created&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUploadBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideViewBtn__c</fullName>
        <formula>OR(Text(Status__c) = &apos;Created&apos;, TEXT(Status__c) = &apos;Uploaded&apos;, TEXT(Status__c) = &apos;Processing&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideViewBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;FB-&apos; + $User.DepartmentCode__c + &apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondApproverComment__c</fullName>
        <label>Second Approver Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecondApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>File_Batches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Sent for Activation</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UploadedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>File_Batches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UploadedDatetime__c</fullName>
        <label>Uploaded Datetime</label>
        <type>DateTime</type>
    </fields>
    <label>File Batch</label>
    <nameField>
        <label>File Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Batches</pluralLabel>
    <recordTypes>
        <fullName>App12</fullName>
        <active>true</active>
        <label>App12</label>
    </recordTypes>
    <recordTypes>
        <fullName>FedCompete</fullName>
        <active>true</active>
        <label>FedCompete</label>
    </recordTypes>
    <recordTypes>
        <fullName>FedFormula</fullName>
        <active>true</active>
        <label>FedFormula</label>
    </recordTypes>
    <recordTypes>
        <fullName>LSA</fullName>
        <active>true</active>
        <label>LSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>LSNA</fullName>
        <active>true</active>
        <label>LSNA</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSP</fullName>
        <active>true</active>
        <label>MSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>StateCompete</fullName>
        <active>true</active>
        <label>StateCompete</label>
    </recordTypes>
    <recordTypes>
        <fullName>StateFormula</fullName>
        <active>true</active>
        <label>StateFormula</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>